--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -24,6 +24,7 @@
 <!--        android:id="@+id/gemGrid" />-->
 
     <ImageButton
+        android:id="@+id/pauseBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
