--- a/app/src/main/res/layout/pause_popup.xml
+++ b/app/src/main/res/layout/pause_popup.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="#66000000"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="20sp">
+    android:paddingHorizontal="25sp"
+    android:paddingVertical="25sp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,19 +21,22 @@
         android:text="Some text, with maybe game statistics."
         android:textSize="20sp"
         android:textStyle="italic"
+        android:textAlignment="center"
         android:layout_marginBottom="20sp"
         />
     <Button
+        android:id="@+id/pause_continue"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:background="#008889"
+        android:background="#1bd0d1"
         android:text="Continue !"
         android:layout_marginBottom="10sp" />
 
     <Button
+        android:id="@+id/pause_backMenu"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:background="#880808"
+        android:background="#c91414"
         android:text="Back to Menu"/>
 
 </LinearLayout>
