--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,94 +15,111 @@
         android:contentDescription="@string/landscape"
         android:scaleType="fitXY"
         android:src="@drawable/landscape_3"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <TextView
-        android:id="@+id/waveText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Wave 1"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="28sp"
-        android:textStyle="bold"
-
-        android:layout_marginTop="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/countdown"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="00:00"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/waveText" />
-
-    <ImageButton
-        android:id="@+id/pauseBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_gravity="end"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/colorPrimary"
-
-        android:contentDescription="@string/pauseBtn"
-        android:src="@android:drawable/ic_media_pause"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Chronometer
-        android:id="@+id/chronometer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pauseBtn" />
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/gemGrid"
-        android:background="#66000000"
-
-        android:layout_marginTop="300dp"
-        android:layout_marginBottom="150dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
-    </GridLayout>
+    />
 
-    <androidx.gridlayout.widget.GridLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/topComponents"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="590sp"
-        android:background="#006644"
-
-        app:columnCount="5"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="16sp"
+        android:paddingVertical="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/waveText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Wave 1"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_red_light"
+            android:textSize="28sp"
+            android:textStyle="bold"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+        />
+
+        <TextView
+            android:id="@+id/countdown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="00:00"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/waveText"
+        />
+
+        <ImageButton
+            android:id="@+id/pauseBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="end"
+            android:background="@color/colorPrimary"
+
+            android:contentDescription="@string/pauseBtn"
+            android:src="@android:drawable/ic_media_pause"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+        />
+
+        <Chronometer
+            android:id="@+id/chronometer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pauseBtn"
+        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/monsterGrid"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+
+        android:background="#35880000"
+        app:columnCount="7"
+        app:layout_constraintBottom_toTopOf="@+id/gemGrid"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topComponents">
+    </androidx.gridlayout.widget.GridLayout>
+
+    <GridLayout
+        android:id="@+id/gemGrid"
+        android:layout_width="match_parent"
+        android:layout_height="300sp"
+        android:background="#66000000"
+        app:layout_constraintBottom_toTopOf="@+id/heroGrid"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+    </GridLayout>
+
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/heroGrid"
+        android:layout_width="match_parent"
+        android:layout_height="100sp"
+
+        android:background="#66006644"
+        app:columnCount="5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
     </androidx.gridlayout.widget.GridLayout>
 
 
