--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -105,22 +105,141 @@
         android:layout_width="match_parent"
         android:layout_height="300sp"
         android:background="#66000000"
-        app:layout_constraintBottom_toTopOf="@+id/heroGrid"
+        app:layout_constraintBottom_toTopOf="@+id/heroLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+
     </GridLayout>
 
-    <androidx.gridlayout.widget.GridLayout
-        android:id="@+id/heroGrid"
+<!--    <androidx.gridlayout.widget.GridLayout-->
+<!--        android:id="@+id/heroGrid"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="100sp"-->
+
+<!--        android:background="#66006644"-->
+<!--        app:columnCount="5"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent">-->
+
+<!--        <ImageButton-->
+<!--            app:srcCompat="@drawable/hero_purple"-->
+<!--            android:id="@+id/heroPurple"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_column="0"-->
+<!--            app:layout_row="0"-->
+<!--            android:scaleType="fitCenter"-->
+<!--            android:adjustViewBounds="true"-->
+<!--        />-->
+
+<!--        <ImageButton-->
+<!--            app:srcCompat="@drawable/hero_yellow"-->
+<!--            android:id="@+id/heroYellow"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_column="1"-->
+<!--            app:layout_row="0"-->
+<!--            android:scaleType="fitCenter"-->
+<!--            android:adjustViewBounds="true"-->
+<!--        />-->
+<!--        <ImageButton-->
+<!--            app:srcCompat="@drawable/hero_red"-->
+<!--            android:id="@+id/heroRed"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_column="2"-->
+<!--            app:layout_row="0"-->
+<!--            android:scaleType="fitCenter"-->
+<!--            android:adjustViewBounds="true"-->
+<!--        />-->
+<!--        <ImageButton-->
+<!--            app:srcCompat="@drawable/hero_green"-->
+<!--            android:id="@+id/heroGreen"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_column="3"-->
+<!--            app:layout_row="0"-->
+<!--            android:scaleType="fitCenter"-->
+<!--            android:adjustViewBounds="true"-->
+<!--        />-->
+<!--        <ImageButton-->
+<!--            app:srcCompat="@drawable/hero_blue"-->
+<!--            android:id="@+id/heroBlue"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_column="4"-->
+<!--            app:layout_row="0"-->
+<!--            android:scaleType="fitCenter"-->
+<!--            android:adjustViewBounds="true"-->
+<!--        />-->
+
+<!--    </androidx.gridlayout.widget.GridLayout>-->
+
+    <LinearLayout
+        android:id="@+id/heroLayout"
         android:layout_width="match_parent"
         android:layout_height="100sp"
 
         android:background="#66006644"
-        app:columnCount="5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-    </androidx.gridlayout.widget.GridLayout>
+        app:layout_constraintStart_toStartOf="parent"
+
+
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteY="331dp">
+
+        <ImageButton
+            app:srcCompat="@drawable/hero_purple"
+            android:id="@+id/heroPurple"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_weight="1"
+            />
+
+        <ImageButton
+            app:srcCompat="@drawable/hero_yellow"
+            android:id="@+id/heroYellow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_weight="1"
+
+            />
+        <ImageButton
+            app:srcCompat="@drawable/hero_red"
+            android:id="@+id/heroRed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_weight="1"
+
+            />
+        <ImageButton
+            app:srcCompat="@drawable/hero_green"
+            android:id="@+id/heroGreen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_weight="1"
+
+            />
+        <ImageButton
+            app:srcCompat="@drawable/hero_blue"
+            android:id="@+id/heroBlue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
