--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -185,10 +185,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
-
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteY="331dp">
+        android:orientation="horizontal">
 
         <ImageButton
             app:srcCompat="@drawable/hero_purple"
