--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -94,22 +94,30 @@
 
         android:background="#35880000"
         app:columnCount="7"
-        app:layout_constraintBottom_toTopOf="@+id/gemGrid"
+        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topComponents">
     </androidx.gridlayout.widget.GridLayout>
 
-    <GridLayout
-        android:id="@+id/gemGrid"
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+
         android:layout_width="match_parent"
-        android:layout_height="300sp"
-        android:background="#66000000"
+        android:layout_height="0dp"
+
         app:layout_constraintBottom_toTopOf="@+id/heroLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+        <GridLayout
+            android:id="@+id/gemGrid"
+            android:layout_width="match_parent"
+            android:layout_height="300sp"
+            android:background="#66000000">
 
-    </GridLayout>
+        </GridLayout>
+    </RelativeLayout>
+
 
 <!--    <androidx.gridlayout.widget.GridLayout-->
 <!--        android:id="@+id/heroGrid"-->
