--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -92,18 +92,31 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <androidx.gridlayout.widget.GridLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/monsterGrid"
             android:layout_width="match_parent"
             android:layout_height="0dp"
 
             android:background="#35880000"
-            app:columnCount="7"
             app:layout_constraintBottom_toTopOf="@+id/gemGrid"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/topComponents">
-        </androidx.gridlayout.widget.GridLayout>
+
+            <GridLayout
+                android:id="@+id/monsterGridTop"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/monsterGridBottom"/>
+
+            <GridLayout
+                android:id="@+id/monsterGridBottom"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/monsterGridTop" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <GridLayout
